MDEV-10041: Server crashes sporadically during bootstrap while running wsrep tests

The crash is caused due to a race condition where wsrep
startup threads invoke ha_maria::implicit_commit() method
while maria_hton is partially initialized. The fix is to
skip this method if plugins are uninitialized.